# NeuTTS-Studio

./: .gitignore  .gitkeep  .pre-commit-config.yaml  LICENSE  README.md  TRAINING.md  __init__.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  performance_issue.md
.github/workflows/: python-app.yml
core/: __init__.py  audio.py  chunker.py  engine.py  progress.py  ui.py
data/: __init__.py
modules/: __init__.py  cloning.py  finetuning.py  settings.py  streaming.py  tts.py  voice_selector.py
