[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutts-studio"
version = "2.0.0"
description = "User-friendly interface for NeuTTS - On-Device Text-to-Speech, Voice Cloning, and Real-Time Streaming"
readme = "README.md"
authors = [
    {name = "Fardin Sabid", email = "your-email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Android",
    "Operating System :: iOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.10"
dependencies = [
    "neutts[all]",
    "torch>=2.8.0",
    "transformers>=4.56.0",
    "neucodec>=0.0.4",
    "phonemizer>=3.0.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.0",
    "resampy>=0.4.0",
    "audioread>=3.0.0",
    "numpy>=2.2.6",
    "resemble-perth>=1.0.1",
    "tqdm>=4.66.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
streaming = ["pyaudio"]
finetune = ["datasets", "omegaconf", "fire", "loguru"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pylint>=3.0.0",
    "bandit>=1.7.0",
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/fardin-sabid/NeuTTS-Studio"
Repository = "https://github.com/fardin-sabid/NeuTTS-Studio"
Documentation = "https://github.com/fardin-sabid/NeuTTS-Studio#readme"
"Original NeuTTS" = "https://github.com/neuphonic/neutts"
"Neuphonic" = "https://neuphonic.com"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    ai-env
    | dev-env
    | __pycache__
    | \.git
    | \.github
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["core", "modules", "config"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = [
    'ai-env/',
    'dev-env/',
    'build/',
    'dist/',
    'tests/',
]

[[tool.mypy.overrides]]
module = [
    "torch",
    "numpy",
    "librosa",
    "neucodec",
    "neutts",
    "phonemizer",
    "soundfile",
    "resampy",
    "pyaudio",
    "datasets",
    "omegaconf",
    "fire",
    "loguru",
]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.10"
jobs = 0
persistent = true
suggestion-mode = true
unsafe-load-any-extension = false

[tool.pylint.master]
ignore = ["ai-env", "dev-env", "__pycache__", "tests"]
ignore-patterns = []
ignored-modules = ["torch", "numpy", "librosa", "neucodec", "neutts", "pyaudio"]
extension-pkg-whitelist = ["torch"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0511",  # fixme
    "W0707",  # raise-missing-from
]

[tool.pylint.format]
max-line-length = 88
max-module-lines = 2000
indent-string = "    "

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 8
max-branches = 15
max-statements = 60
max-parents = 7
max-attributes = 10
min-public-methods = 1
max-public-methods = 30

[tool.pylint.similarities]
min-similarity-lines = 5
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

[tool.pylint.variables]
dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
ignored-argument-names = "_.*|^ignored_|^unused_"
callbacks = ["cb_", "_cb"]

[tool.pylint.typecheck]
ignored-classes = ["torch.Tensor", "numpy.ndarray"]

[tool.bandit]
exclude_dirs = ["ai-env", "dev-env", "tests", "__pycache__", "build", "dist"]
skips = [
    "B101",  # assert used
    "B301",  # pickle
    "B403",  # pickle
    "B404",  # import subprocess
    "B603",  # subprocess without shell=True
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "android: marks tests specific to Android",
    "ios: marks tests specific to iOS",
    "linux: marks tests specific to Linux",
]

[tool.coverage.run]
source = ["core", "modules", "config.py"]
omit = [
    "*/ai-env/*",
    "*/dev-env/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "modules"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml"]
"core" = ["*.py"]
"modules" = ["*.py"]